[metadata]
description-file = README.md

[flake8]
# Docstrings are not needed for magic methods.
# A blank line after a function doc string should always be okay.
# Class docstrings should not be preceded by an empty line.
ignore = D105,D202,D203
# __init__ modules can import stuff they don't need for exposure.
# __init__ methods do not require a docstring and if they do have one it
# doesn't need a summary line as that should already be prent in the class
# docstring.
putty-ignore =
    */__init__.py : +F401
    /def __init__/ : +D102,D205,D400,D401
